refactor test class for inline rule provider